fixed custom button alignment and button chopping issues with certain browsers.

--- a/media2/css/res_draw.css
+++ b/media2/css/res_draw.css
@@ -146,3 +146,7 @@ p.x-panel-static{
 	opacity: 0.55;
 
 }
+
+.custom-left-button {
+    float:right;
+}
